gstqtvideosink: fix memory leak and synchronization issue related to buffer reference counting

https://bugzilla.gnome.org/show_bug.cgi?id=736758